# xcompare

./: .gitignore  .readthedocs.yaml  CODEOWNERS  README.md  examples.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  xcompare.ipynb
.github/workflows/: build-documentation.yml  code-formatting.yml  continuous-integration.yml
ci/: docs.yml  environment.yml  formatting.yml
docs/: requirements.txt
docs/source/: conf.py  contrib.rst  index.rst  install.rst
docs/source/api/: xcompare.plot.rst  xcompare.rst  xcompare.test_xcompare.rst  xcompare.test_xr_stats.rst  xcompare.xcompare.rst  xcompare.xr_stats.rst
notebooks/: Example Jupyter Notebook.ipynb
src/xcompare/: __init__.py  plot.py  xcompare.py
src/xcompare/tests/: test_compare_xy.py  test_coord_util.py  test_standard_grid.py  test_xcompare.py
xcompare/: Compare.py  __init__.py  compare.py  compare_xy.py  coord_util.py  plot.py  standard_grid.py  test_xcompare.py  test_xr_stats.py  version.py  xcompare.py  xr_stats.py
xcompare/tests/: test_coord_util.py
