[metadata]
name = xcompare
version = 0.0.1
description = Compare two GFDL-formatted Xarray datasets
url = https://github.com/jkrasting/xcompare
author = John Krasting
author_email = john.krasting@noaa.gov
keywords = xarray xesmf gfdl compare
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: Public Domain
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type=text/x-rst
long_description =
    **xcompare** is a Python package in the public domain
    that compares variables across two Xarray datasets.xcompare

    The package assumes GFDL modeling conventions but could be
    generalized further in the future.

    More Information
    ----------------
    - Source code: `<http://github.com/jkrasting/xcompare>`_

[options]
packages = xcompare
zip_safe = False
include_package_data = False
python_requires = >=3.7
install_requires =
    numpy>=1.17
    xarray>=0.17.0

